modify relative path

--- a/template/single.html
+++ b/template/single.html
@@ -7,19 +7,19 @@
     <title>AYin Express ${itemTitle}</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../css/bootstrap.min.css" rel="stylesheet">
     <!-- for fontawesome icon css file -->
-    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="../../css/font-awesome.min.css" rel="stylesheet">
     <!-- for content animate css file -->
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="../../css/animate.css">
     <!-- google fonts  -->
     <link href='http://fonts.useso.com/css?family=Oswald' rel='stylesheet' type='text/css'> 
      <!-- slick slider css file -->
-    <link href="css/slick.css" rel="stylesheet">     
-    <!-- <link href="css/theme-red.css" rel="stylesheet"> -->    
-     <link href="css/theme.css" rel="stylesheet">
+    <link href="../../css/slick.css" rel="stylesheet">     
+    <!-- <link href="../../css/theme-red.css" rel="stylesheet"> -->    
+     <link href="../../css/theme.css" rel="stylesheet">
     <!-- main site css file -->    
-    <link href="style.css" rel="stylesheet">
+    <link href="../../style.css" rel="stylesheet">
  
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -51,9 +51,9 @@
 					<div class="header_top">
 						<div class="header_top_left">
 							<ul class="top_nav">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="page.html">关于</a></li>
-								<li><a href="contact.html">联系我</a></li>
+								<li><a href="../../index.html">Home</a></li>
+								<li><a href="../../page.html">关于</a></li>
+								<li><a href="../../contact.html">联系我</a></li>
 							</ul>
 						</div>
 						<div class="header_top_right">
@@ -68,16 +68,16 @@
 					<div class="header_bottom">
 						<div class="header_bottom_left">
 							<!-- for img logo -->
-							<!-- <a class="logo" href="index.html">
-              <img src="img/logo.jpg" alt="logo">
+							<!-- <a class="logo" href="../../index.html">
+              <img src="../../img/logo.jpg" alt="logo">
              </a>-->
 							<!-- for text logo -->
-							<a class="logo" href="index.html"> aYin<strong>Express</strong>
+							<a class="logo" href="../../index.html"> aYin<strong>Express</strong>
 								<span>内容聚合Deligate</span>
 							</a>
 						</div>
 						<div class="header_bottom_right">
-							<a href="#"><img src="img/addbanner_728x90_V1.jpg" alt="img"></a>
+							<a href="#"><img src="../../img/addbanner_728x90_V1.jpg" alt="img"></a>
 						</div>
 					</div>
 					<!-- End header bottom -->
@@ -98,17 +98,17 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
 						<ul class="nav navbar-nav custom_nav">
-							<li class=""><a href="index.html">主页</a></li>
+							<li class=""><a href="../../index.html">主页</a></li>
 							<li class="dropdown"><a href="#" class=""
 								data-toggle="dropdown" role="button" aria-expanded="false">分类</a>
 								<ul class="dropdown-menu" role="menu">
-									<li><a href="macstory.html">神马值得买</a></li>
-									<li><a href="ifan.html">爱范儿</a></li>
-									<li><a href="quora.html">Quora TOP</a></li>
-									<li><a href="zhihu.html">知乎精选</a></li>
+									<li><a href="../../macstory.html">神马值得买</a></li>
+									<li><a href="../../ifan.html">爱范儿</a></li>
+									<li><a href="../../quora.html">Quora TOP</a></li>
+									<li><a href="../../zhihu.html">知乎精选</a></li>
 								</ul></li>
-							<li><a href="fasion.html">设计</a></li>
-							<li><a href="jike.html">技术</a></li>
+							<li><a href="../../fasion.html">设计</a></li>
+							<li><a href="../../jike.html">技术</a></li>
 						</ul>
 					</div><!--/.nav-collapse -->
           </div><!--/.container-fluid -->
@@ -185,7 +185,7 @@
                     <li>
                       <div class="media wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">
                         <a class="media-left related-img" href="#">
-                          <img src="img/devhill/112x112.jpg" alt="img">
+                          <img src="../../img/devhill/112x112.jpg" alt="img">
                         </a>
                         <div class="media-body">
                           <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4> 
@@ -196,7 +196,7 @@
                     <li>
                       <div class="media wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">
                         <a class="media-left related-img" href="#">
-                          <img src="img/devhill/112x112.jpg" alt="img">
+                          <img src="../../img/devhill/112x112.jpg" alt="img">
                         </a>
                         <div class="media-body">
                           <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4> 
@@ -207,7 +207,7 @@
                     <li>
                       <div class="media wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">
                         <a class="media-left related-img" href="#">
-                          <img src="img/devhill/112x112.jpg" alt="img">
+                          <img src="../../img/devhill/112x112.jpg" alt="img">
                         </a>
                         <div class="media-body">
                           <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4> 
@@ -229,7 +229,7 @@
                     <li>
                       <div class="media wow fadeInDown">
                         <a href="#" class="media-left">
-                          <img alt="img" src="img/devhill/112x112.jpg">
+                          <img alt="img" src="../../img/devhill/112x112.jpg">
                         </a>
                         <div class="media-body">
                           <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4> 
@@ -240,7 +240,7 @@
                     <li>
                       <div class="media wow fadeInDown">
                         <a href="#" class="media-left">
-                          <img alt="img" src="img/devhill/112x112.jpg">
+                          <img alt="img" src="../../img/devhill/112x112.jpg">
                         </a>
                         <div class="media-body">
                           <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4> 
@@ -251,7 +251,7 @@
                     <li>
                       <div class="media wow fadeInDown">
                         <a href="#" class="media-left">
-                          <img alt="img" src="img/devhill/112x112.jpg">
+                          <img alt="img" src="../../img/devhill/112x112.jpg">
                         </a>
                         <div class="media-body">
                           <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4> 
@@ -273,7 +273,7 @@
                       <li>
                         <div class="media wow fadeInDown">
                           <a class="media-left" href="#">
-                            <img src="img/devhill/112x112.jpg" alt="img">
+                            <img src="../../img/devhill/112x112.jpg" alt="img">
                           </a>
                           <div class="media-body">
                             <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4> 
@@ -284,7 +284,7 @@
                       <li>
                         <div class="media wow fadeInDown">
                           <a class="media-left" href="#">
-                            <img src="img/devhill/112x112.jpg" alt="img">
+                            <img src="../../img/devhill/112x112.jpg" alt="img">
                           </a>
                           <div class="media-body">
                             <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4> 
@@ -295,7 +295,7 @@
                       <li>
                         <div class="media wow fadeInDown">
                           <a class="media-left" href="#">
-                            <img src="img/devhill/112x112.jpg" alt="img">
+                            <img src="../../img/devhill/112x112.jpg" alt="img">
                           </a>
                           <div class="media-body">
                             <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4> 
@@ -310,7 +310,7 @@
                       <li>
                         <div class="media wow fadeInDown">
                           <a class="media-left" href="#">
-                            <img src="img/devhill/112x112.jpg" alt="img">
+                            <img src="../../img/devhill/112x112.jpg" alt="img">
                           </a>
                           <div class="media-body">
                             <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4> 
@@ -321,7 +321,7 @@
                       <li>
                         <div class="media wow fadeInDown">
                           <a class="media-left" href="#">
-                            <img src="img/devhill/112x112.jpg" alt="img">
+                            <img src="../../img/devhill/112x112.jpg" alt="img">
                           </a>
                           <div class="media-body">
                             <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4> 
@@ -332,7 +332,7 @@
                       <li>
                         <div class="media wow fadeInDown">
                           <a class="media-left" href="#">
-                            <img src="img/devhill/112x112.jpg" alt="img">
+                            <img src="../../img/devhill/112x112.jpg" alt="img">
                           </a>
                           <div class="media-body">
                             <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium lobortis </a></h4> 
@@ -380,28 +380,28 @@
                 <h2>Flicker Images</h2>
                 <ul class="flicker_nav">
                   <li>
-                      <a href="#"><img src="img/devhill/75x75.jpg" alt="img"></a>
+                      <a href="#"><img src="../../img/devhill/75x75.jpg" alt="img"></a>
                   </li>                 
                   <li>
-                      <a href="#"><img src="img/devhill/75x75.jpg" alt="img"></a>
+                      <a href="#"><img src="../../img/devhill/75x75.jpg" alt="img"></a>
                   </li>
                    <li>
-                      <a href="#"><img src="img/devhill/75x75.jpg" alt="img"></a>
+                      <a href="#"><img src="../../img/devhill/75x75.jpg" alt="img"></a>
                   </li>                 
                   <li>
-                      <a href="#"><img src="img/devhill/75x75.jpg" alt="img"></a>
+                      <a href="#"><img src="../../img/devhill/75x75.jpg" alt="img"></a>
                   </li>
                    <li>
-                      <a href="#"><img src="img/devhill/75x75.jpg" alt="img"></a>
+                      <a href="#"><img src="../../img/devhill/75x75.jpg" alt="img"></a>
                   </li>                 
                   <li>
-                     <a href="#"><img src="img/devhill/75x75.jpg" alt="img"></a>
+                     <a href="#"><img src="../../img/devhill/75x75.jpg" alt="img"></a>
                   </li>
                    <li>
-                      <a href="#"><img src="img/devhill/75x75.jpg" alt="img"></a>
+                      <a href="#"><img src="../../img/devhill/75x75.jpg" alt="img"></a>
                   </li>                 
                   <li>
-                     <a href="#"><img src="img/devhill/75x75.jpg" alt="img"></a>
+                     <a href="#"><img src="../../img/devhill/75x75.jpg" alt="img"></a>
                   </li>
                 </ul>
               </div>
@@ -436,14 +436,14 @@
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<div class="footer_bottom_left">
 							<p>
-								Copyright © 2015 <a href="index.html">AYIN</a>
+								Copyright © 2015 <a href="../../index.html">AYIN</a>
 							</p>
 						</div>
 					</div>
 					<div>
 						<div class="footer_bottom_center">
 							<p>
-							<script src="js/cnzz.js"></script>
+							<script src="../../js/cnzz.js"></script>
 							</p>
 						</div>
 					</div>
@@ -463,14 +463,14 @@
   <!-- jQuery google CDN Library -->
   <script src="http://ajax.useso.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
   <!-- For content animatin  -->
-  <script src="js/wow.min.js"></script>
+  <script src="../../js/wow.min.js"></script>
   <!-- bootstrap js file -->
-  <script src="js/bootstrap.min.js"></script> 
+  <script src="../../js/bootstrap.min.js"></script> 
   <!-- slick slider js file -->
-  <script src="js/slick.min.js"></script> 
+  <script src="../../js/slick.min.js"></script> 
   
     <!-- custom js file include -->
-  <script src="js/custom.js"></script> 
+  <script src="../../js/custom.js"></script> 
 
   <!-- =========================
         //////////////This Theme Design and Developed //////////////////////
