modify relative path

--- a/template/single.html
+++ b/template/single.html
@@ -136,10 +136,10 @@
                       <a href="#"><i class="fa fa-tags"></i>Technology</a>
                     </div>
                     <img class="img-center" src="${itemLogo}" alt="img">
-                    <blockquote>
-                      Donec volutpat nibh sit amet libero ornare non laoreet arcu luctus.
-                    </blockquote>
                     <p>${itemcontent}</p>
+                    <blockquote>
+                      请关注我们的网站或订阅号获取及时更新.
+                    </blockquote>
                     <ul>
                       <li>Nunc sed aliquet nisi. Nullam ut magna</li>
                       <li>Nunc sed aliquet nisi. Nullam ut magna non</li>
