modify relative path

--- a/template/single.html
+++ b/template/single.html
@@ -135,7 +135,7 @@
                       <span><i class="fa fa-calendar"></i>6:49 AM</span>
                       <a href="#"><i class="fa fa-tags"></i>Technology</a>
                     </div>
-                    <img class="img-center" src="${itemLogo}" alt="img">
+                    <!-- img class="img-center" src="${itemLogo}" alt="img"-->
                     <p>${itemcontent}</p>
                     <blockquote>
                       请关注我们的网站或订阅号获取及时更新.
