modify relative path

--- a/template/single.html
+++ b/template/single.html
@@ -136,7 +136,7 @@
                       <a href="#"><i class="fa fa-tags"></i>Technology</a>
                     </div>
                     <!-- img class="img-center" src="${itemLogo}" alt="img"-->
-                    <p>${itemcontent}</p>
+                    ${itemcontent}
                     <blockquote>
                       请关注我们的网站或订阅号获取及时更新.
                     </blockquote>
