modify template bottom

--- a/template/single.html
+++ b/template/single.html
@@ -51,7 +51,6 @@
 					<div class="header_top">
 						<div class="header_top_left">
 							<ul class="top_nav">
-								<li><a href="../../index.html">Home</a></li>
 								<li><a href="../../page.html">关于</a></li>
 								<li><a href="../../contact.html">联系我</a></li>
 							</ul>
@@ -68,7 +67,7 @@
 					<div class="header_bottom">
 						<div class="header_bottom_left">
 							<!-- for img logo -->
-							<!-- <a class="logo" href="../../index.html">
+							<!-- <a class="logo" href="http://www.ayinexpress.cn/index.html">
               <img src="../../img/logo.jpg" alt="logo">
              </a>-->
 							<!-- for text logo -->
@@ -435,21 +434,16 @@
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<div class="footer_bottom_left">
 							<p>
-								Copyright © 2015 <a href="../../index.html">AYIN</a>
-							</p>
-						</div>
-					</div>
-					<div>
-						<div class="footer_bottom_center">
-							<p>
-							<script src="../../js/cnzz.js"></script>
+								Copyright © 2016 <a href="http://www.ayinexpress.cn/index.html"> AYIN Express 版本所有    </a>
+								<script src="js/cnzz.js"></script>
 							</p>
 						</div>
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<div class="footer_bottom_right">
 							<p>
-								Designed BY <a href="http://www.ayinexpress.cn/">AYIN</a>
+								<a href="http://www.miitbeian.gov.cn" title="网站备案" 
+								target="_blank">网站备案号：沪ICP备16009279号</a>
 							</p>
 							
 						</div>
