modify single template

--- a/template/single.html
+++ b/template/single.html
@@ -138,10 +138,11 @@
                     ${itemcontent}
                     <blockquote>
                       请关注我们的网站或订阅号获取及时更新.
+                      <img class="img-center" src="../../img/qrcode_for_ayinexp.jpg" alt="img">
                     </blockquote>
                     <ul>
-                      <li>Nunc sed aliquet nisi. Nullam ut magna</li>
-                      <li>Nunc sed aliquet nisi. Nullam ut magna non</li>
+                      <li>关注我们的微信公众号</li>
+                      <li><img src="../../img/qrcode_for_ayinexp.jpg" alt="logo"></li>
                     </ul>
                     <button class="btn">Default</button>
                   </div>                 
