modify single template

--- a/template/single.html
+++ b/template/single.html
@@ -138,13 +138,8 @@
                     ${itemcontent}
                     <blockquote>
                       请关注我们的网站或订阅号获取及时更新.
-                      <img class="img-center" src="../../img/qrcode_for_ayinexp.jpg" alt="img">
+                      <img src="../../img/qrcode_for_ayinexp.jpg" alt="img">
                     </blockquote>
-                    <ul>
-                      <li>关注我们的微信公众号</li>
-                      <li><img src="../../img/qrcode_for_ayinexp.jpg" alt="logo"></li>
-                    </ul>
-                    <button class="btn">Default</button>
                   </div>                 
                 </div>                  
               </div><!--End content_bottom_left--> 
@@ -436,7 +431,7 @@
 						<div class="footer_bottom_left">
 							<p>
 								Copyright © 2016 <a href="http://www.ayinexpress.cn/index.html"> AYIN Express 版本所有    </a>
-								<script src="js/cnzz.js"></script>
+								<script src="../../js/cnzz.js"></script>
 							</p>
 						</div>
 					</div>
