modify single template

--- a/template/single.html
+++ b/template/single.html
@@ -137,7 +137,7 @@
                     <!-- img class="img-center" src="${itemLogo}" alt="img"-->
                     ${itemcontent}
                     <blockquote>
-                      请关注我们的网站或订阅号获取及时更新.
+                      请关注我们的网站或订阅号获取及时更新.<br />
                       <img src="../../img/qrcode_for_ayinexp.jpg" alt="img">
                     </blockquote>
                   </div>                 
