fix check category

--- a/template/single.html
+++ b/template/single.html
@@ -123,7 +123,7 @@
               <div class="content_bottom_left">                
                 <div class="single_page_area">
                   <ol class="breadcrumb">
-                    <li><a href="index.html">首页</a></li>
+                    <li><a href="../../index.html">首页</a></li>
                     <li><a href="${categoryLink}">${categoryName}</a></li>
                     <li class="active">${itemTitle}</li>
                   </ol>
